--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>ElectroTech</title>
   </head>
   <body>
-    <div id="root" class="dark:bg-neutral-800"></div>
+    <div id="root" class="font-inter dark:bg-neutral-800"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
